
	Bug fix and code simplication of variable expansion.

	-----

	tied variable expansion added. Allows method workaround for file dissemination
	by name, e.g. copy from

	host1.conf -> /dir/host1/file.conf
        host2.conf -> /dir/host2/file.conf  e.g. for virtual or diskless machines
	
	-----

	Major changes to package manager code by Jo Rhett. Variable expansion
	fixed by Mark.
	
2.2.1
	scli: type section added. This is a special case of shellcommands, which
	send commands to the special shell scli by Juergen Schoenwaelder for
	communicating with snmp devices.

	Code refactoring for package management.

	Bug fixes for problems introduced in 2.2.0.

	Copy directory would not set owner correctly on root
	
2.2.0
	Apart from minor changes, this version is about structural internal
	changes that ease the eventual confluence with cfengine 3 and the work
	going on behind the scenes there. Every effort is being made to
	make this change easy for users and existing installations. New features
	will be introduced into 2.2.x gradually, and the new front-end will
	eventually merge into this.

	This version accompanies a new introduction to cfengine published as
	a SAGE Short Topics book.

	* Some changes

	EMANICS extensions and reference testing for context sensitive
	network navigation patterns using voluntary cooperation contracts.
	
	PrintFile("name") function added to alerts
	
	!! List expansion in editfiles actions. This is an important change 
	because it can potentially affect existing configurations that contain
	variables with a list separator in them. EditSplit is used for this.

	elsdefine fixed in tidy
	
	processes with action=warn only install fix

	ifelapsed/expireafter fixed in editfiles

	Instrumentation of copy/shellcommands measuring time/averages
	use cfshow --performance

	background=true in shellcommands was not implemented! (Fixed)

	SLES10 recognition
	RedHat/Fedora further classes

	SELinux support begun by Jeff Sheltren UCSB, who notes. 
