@@ -400,6 +400,7 @@ typedef int clockid_t;
 #define CF_MD5_LEN 16
 #define CF_SHA_LEN 20
 #define CF_SHA1_LEN 20
+#define CF_BEST_LEN 0
 #define CF_SHA224_LEN 28
 #define CF_SHA256_LEN 32
 #define CF_SHA384_LEN 48
@@ -1685,8 +1686,8 @@ struct File
    int    expireafter;
    struct Audit *audit;
    int    lineno;
-   char   checksum;   /* m=md5 n=none */
-   u_long plus_flags;    /* for *BSD chflags */
+   char   checksum;       /* m=md5, n=none, b = crosscheck etc (see CF_DIGEST_TYPES) */
+   u_long plus_flags;     /* for *BSD chflags */
    u_long minus_flags;    /* for *BSD chflags */
    struct File *next;
    };
